--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
    <header
-      <img src="#" alt="Logo"
+      <img src="./logo-2.png" alt="Logo"
       <nav>
           <a href="#">Home</a>
           <a href="#">Tracks</a>
-          <a hreft="#">Library</a>
+          <a href="#">Library</a>
           <a href="#">Community</a>
           <a href="#">Sign in</a>
       </nav>
