--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <header
-      <img src="./Logo-3.png" alt="Logo"
+      <img src="./veidelis.png" alt="Logo"
       <nav>
           <a href="#">Home</a>
           <a href="#">Tracks</a>
