--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <header
-      <img src="./veidelis.png" alt="Logo">
+      <img src="./img/veidelis.png" alt="Logo">
       <nav>
           <a href="#">Home</a>
           <a href="#">Tracks</a>
