--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <h1>404</h1>
          <p>The link is broken or the page has been moved.</p>
       </div>
-      <img src="./veidelis.png" alt="Liudnas veidelis ir mergina">
+      <img src="./img/veidelis.png" alt="Liudnas veidelis ir mergina">
    </main> 
     
 </body>
